vlib/v/checker/tests/generic_sumtype_decl_err_a.vv
struct Just<T> {
  value T
}

struct Nothing {}

type Maybe = Nothing | Just

fn main() {
}
